# vam

./: .gitignore  Pranav_optimizer.ipynb  README.md  README_SWEEPS.md  SimpleCNN.py  VADAM.py  VADAM_cnn.py  VRADAM_cnn.py  __init__.py  analyze_sweeps.py  architectures.py  benchmarker.py  benchmarker_cnn.py  debugging.py  diffusion_benchmark.py  diffusion_model.py  edge_of_stability_analysis.py  eos_experiments.json  ppo_architectures.py  pyproject.toml  render_halfcheetah.py  requirements.txt  rl_architectures.py  rl_benchmark.py  rl_environments.py  run_benchmarks.py  run_diffusion_benchmark.py  run_edge_of_stability_experiments.py  run_optimized_benchmark.py  run_single_gflownet.py  run_sweep_agent.py  run_sweep_agent_cnn.py  run_sweep_agent_diffusion.py  run_sweep_agent_rl.py  run_sweep_agent_transformer.py  sweep_vadam.py  sweep_vadam_cnn.py  sweep_vadam_rl.py  sweep_vadam_transformer.py  sweep_vradam_cnn.py  (+12 more)
Edgeofstability/: README.md  archs.py  plot_adam_comparsion.py  plotting.py  sho_phase_space_plot.py  synthetic.py  tmp.py  vradam.py
benchmark_results/: CIFAR10_SimpleCNN_20250507_221555.json  CIFAR10_SimpleCNN_20250507_221555_summary.txt  CIFAR10_SimpleCNN_20250507_224233.json  CIFAR10_SimpleCNN_20250507_224233_summary.txt  CIFAR10_SimpleCNN_20250507_233301.json  CIFAR10_SimpleCNN_20250507_233301_summary.txt  CIFAR10_SimpleCNN_20250507_235115.json  CIFAR10_SimpleCNN_20250507_235115_summary.txt  CIFAR10_SimpleCNN_20250509_184921.json  CIFAR10_SimpleCNN_20250509_184921_summary.txt  HalfCheetah_RL_20250513_094335.json  HalfCheetah_RL_20250513_111130.json  (+17 more)
(+1261 files in other folders)
